--- a/mfg-info-escola/biblioteca/BIBLIOTECA.ini
+++ b/mfg-info-escola/biblioteca/BIBLIOTECA.ini
@@ -2,8 +2,9 @@
 ApaSis=S
 ClrSis=S
 PrtSis=S
-BanSis=127.0.0.1:D:\projeto\mfg-info-escola\biblioteca\dados\BIBLIOTECA.fdb
-BanSis1=127.0.0.1:C:\mfg-info\biblioteca\dados\BIBLIOTECA.gdb
+BanSis=192.168.1.121:D:\projeto_delphi\escola\mfg-info-escola\biblioteca\dados\BIBLIOTECA.fdb
+#BanSis=127.0.0.1:D:\projeto\mfg-info-escola\biblioteca\dados\BIBLIOTECA.fdb
+#BanSis=127.0.0.1:C:\mfg-info\biblioteca\dados\BIBLIOTECA.gdb
 TraSis=S
 QtdImp=500
 InsSis=27/04/2015
@@ -33,7 +34,6 @@ AutRep=S
 VisRep=S
 CfgRep=S
 FilMan=N
-FilMan=
 AtaMan=TPENSINO|EDITORA|GENERO|CURSO|
 AutMan=N
 CtrMan=N
@@ -158,7 +158,6 @@ ColRep=
 ColMan=CD_LOCADOR|CD_CURSO|NM_LOCADOR|TP_LOCADOR|CD_SERE|NR_ANO|CD_TURMA|DT_NASC|DS_ENDERECO|DS_BAIRRO|DS_CIDADE|DS_FONE|DS_UF|TP_ENSINO|DS_COMPLEMENTO|
 CfgRep=S
 FilMan=N
-FilMan=
 AutMan=N
 AtaMan=TPENSINO|CURSO|TURMA|
 CtrMan=N
