--- a/mfg-info-escola/biblioteca/BIBLIOTECA.ini
+++ b/mfg-info-escola/biblioteca/BIBLIOTECA.ini
@@ -43,8 +43,8 @@ StpMan=
 DesMan=
 AltMan=0
 LarMan=0
-RedMan=False
-CadDes=1
+RedMan=0
+CadDes=0
 
 [LOCACAO]
 VisRep=S
@@ -58,6 +58,8 @@ FilMan=N
 AtaMan=LOCADOR|LIVRO|
 IseMul=1
 IseMot=1
+RedMan=0
+CadDes=0
 
 [CONSULTA]
 ColMan=
@@ -74,6 +76,8 @@ DblMan=S
 ModMan=1
 ReaMan=
 StpMan=
+RedMan=0
+CadDes=0
 
 [GENERO]
 FilMan=S
@@ -85,6 +89,8 @@ DblMan=S
 ModMan=1
 ReaMan=
 StpMan=
+RedMan=0
+CadDes=0
 
 [EDITORA]
 FilMan=S
@@ -97,6 +103,8 @@ ModMan=1
 ReaMan=
 StpMan=
 DesMan=
+RedMan=0
+CadDes=0
 
 [CAIXA]
 FilMan=S
@@ -119,6 +127,8 @@ ReaMan=
 StpMan=
 AltMan=0
 LarMan=0
+RedMan=0
+CadDes=0
 
 [LOCACAO / LOCADOR]
 AgrRep=CD_LOCADOR|NM_LOCADOR|
@@ -146,6 +156,8 @@ DblMan=S
 ModMan=1
 ReaMan=
 StpMan=
+RedMan=0
+CadDes=0
 
 [TURMA]
 FilMan=S
@@ -157,3 +169,5 @@ DblMan=S
 ModMan=1
 ReaMan=
 StpMan=
+RedMan=0
+CadDes=0
