--- a/mfg-info-escola/biblioteca/BIBLIOTECA.ini
+++ b/mfg-info-escola/biblioteca/BIBLIOTECA.ini
@@ -10,7 +10,7 @@ QtdImp=500
 InsSis=27/04/2015
 IndDeb=1
 DblMan=N
-AtuSis=26/05/2015 19:22:02
+AtuSis=27/04/2019 11:31:52
 
 [EMAIL]
 EmlServ=smtp.infomark.com.br
@@ -41,7 +41,7 @@ ModMan=1
 AltMan=0
 LarMan=0
 RedMan=0
-CadDes=0
+CadDes=1
 
 [LOCACAO]
 VisRep=S
@@ -56,6 +56,7 @@ IseMul=1
 IseMot=1
 RedMan=0
 CadDes=0
+InfLivAut=False
 
 [CONSULTA]
 ColMan=
@@ -71,7 +72,7 @@ LarMan=80
 DblMan=S
 ModMan=1
 RedMan=0
-CadDes=0
+CadDes=1
 
 [GENERO]
 FilMan=S
@@ -82,7 +83,7 @@ LarMan=80
 DblMan=S
 ModMan=1
 RedMan=0
-CadDes=0
+CadDes=1
 
 [EDITORA]
 FilMan=S
@@ -93,7 +94,7 @@ LarMan=80
 DblMan=S
 ModMan=1
 RedMan=0
-CadDes=0
+CadDes=1
 
 [CAIXA]
 FilMan=S
@@ -114,7 +115,7 @@ ModMan=1
 AltMan=0
 LarMan=0
 RedMan=0
-CadDes=0
+CadDes=1
 
 [LOCACAO / LOCADOR]
 AgrRep=CD_LOCADOR|NM_LOCADOR|
@@ -141,7 +142,7 @@ LarMan=80
 DblMan=S
 ModMan=1
 RedMan=0
-CadDes=0
+CadDes=1
 
 [TURMA]
 FilMan=S
@@ -152,4 +153,4 @@ LarMan=80
 DblMan=S
 ModMan=1
 RedMan=0
-CadDes=0
+CadDes=1
